; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/html/extr_css-parse.c_parse_at_page.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/html/extr_css-parse.c_parse_at_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lexbuf = type { i32, i32 }

@CSS_KEYWORD = common dso_local global i8 0, align 1
@.str = private unnamed_addr constant [6 x i8] c"@page\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.lexbuf*)* @parse_at_page to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @parse_at_page(%struct.lexbuf* %0) #0 {
  %2 = alloca %struct.lexbuf*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store %struct.lexbuf* %0, %struct.lexbuf** %2, align 8
  store i32* null, i32** %3, align 8
  store i32* null, i32** %4, align 8
  %5 = load %struct.lexbuf*, %struct.lexbuf** %2, align 8
  %6 = call i32 @white(%struct.lexbuf* %5)
  %7 = load %struct.lexbuf*, %struct.lexbuf** %2, align 8
  %8 = call i64 @accept(%struct.lexbuf* %7, i8 signext 58)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %16

10:                                               ; preds = %1
  %11 = load %struct.lexbuf*, %struct.lexbuf** %2, align 8
  %12 = load i8, i8* @CSS_KEYWORD, align 1
  %13 = call i32 @expect(%struct.lexbuf* %11, i8 signext %12)
  %14 = load %struct.lexbuf*, %struct.lexbuf** %2, align 8
  %15 = call i32 @white(%struct.lexbuf* %14)
  br label %16

16:                                               ; preds = %10, %1
  %17 = load %struct.lexbuf*, %struct.lexbuf** %2, align 8
  %18 = call i32 @expect(%struct.lexbuf* %17, i8 signext 123)
  %19 = load %struct.lexbuf*, %struct.lexbuf** %2, align 8
  %20 = call i32* @parse_declaration_list(%struct.lexbuf* %19)
  store i32* %20, i32** %4, align 8
  %21 = load %struct.lexbuf*, %struct.lexbuf** %2, align 8
  %22 = call i32 @expect(%struct.lexbuf* %21, i8 signext 125)
  %23 = load %struct.lexbuf*, %struct.lexbuf** %2, align 8
  %24 = call i32 @white(%struct.lexbuf* %23)
  %25 = load %struct.lexbuf*, %struct.lexbuf** %2, align 8
  %26 = getelementptr inbounds %struct.lexbuf, %struct.lexbuf* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.lexbuf*, %struct.lexbuf** %2, align 8
  %29 = getelementptr inbounds %struct.lexbuf, %struct.lexbuf* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i32* @fz_new_css_selector(i32 %27, i32 %30, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  store i32* %31, i32** %3, align 8
  %32 = load %struct.lexbuf*, %struct.lexbuf** %2, align 8
  %33 = getelementptr inbounds %struct.lexbuf, %struct.lexbuf* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = load %struct.lexbuf*, %struct.lexbuf** %2, align 8
  %36 = getelementptr inbounds %struct.lexbuf, %struct.lexbuf* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = load i32*, i32** %3, align 8
  %39 = load i32*, i32** %4, align 8
  %40 = call i32* @fz_new_css_rule(i32 %34, i32 %37, i32* %38, i32* %39)
  ret i32* %40
}

declare dso_local i32 @white(%struct.lexbuf*) #1

declare dso_local i64 @accept(%struct.lexbuf*, i8 signext) #1

declare dso_local i32 @expect(%struct.lexbuf*, i8 signext) #1

declare dso_local i32* @parse_declaration_list(%struct.lexbuf*) #1

declare dso_local i32* @fz_new_css_selector(i32, i32, i8*) #1

declare dso_local i32* @fz_new_css_rule(i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
